# laksh-docker-compose-dev

./: .gitignore  BACKUP_README.md  BUILD.md  FIRST_RUN.md  Makefile  PRODUCTION_NOTES.md  backup.sh  crontab-example.txt  crontab-settings.txt  docker-compose.yml  quick-backup-db.sh  renew-cert.sh  restore.sh
backup/: BACKUP_README.md  backup-db.sh  (+1 more)
docker/laksh-back/app/: .env  pyproject.toml  start.sh
docker/laksh-back/app/src/: check_images.py  create_test_data.py  create_test_image.py  db.sqlite3  update_project_images.py
docker/laksh-back/app/src/apps/api/: admin.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
docker/laksh-back/app/src/config/: admin_panel_settings.py  gunicorn.py  renderers.py  settings.py  urls.py
docker/laksh-back/app/src/config/backends/: __init__.py  file_email.py
docker/laksh-back/app/src/content_blocks/: apps.py  models.py
docker/laksh-back/app/src/pages/: models.py
docker/laksh-back/app/src/pages/migrations/: 0001_initial.py  0002_mainpagesettings.py  0003_mainpageheroimage.py  0004_aboutpagesettings_aboutpageblock_aboutgalleryimage_and_more.py  0005_alter_aboutpageblock_text.py  0006_remove_aboutpagesettings_lead_and_more.py
docker/laksh-back/app/src/people/: apps.py  models.py
docker/laksh-back/app/src/people/migrations/: 0001_initial.py  0002_alter_person_biography.py
docker/laksh-back/app/src/projects/: models.py  models.py.backup  models.py.backup_refactoring  serializers.py  urls.py  views.py
docker/laksh-back/app/src/services/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+66 files in other folders)
